fix z-index for modal

--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -1,6 +1,6 @@
 .modal{
     position: fixed;
-    z-index: 1;
+    z-index: 8;
     left: 0;
     top:0;
     width: 100%;
@@ -15,19 +15,20 @@
     width: 40%;
 }
 
-#syntax-highlighting p,
-#syntax-highlighting select {
+.modal-content p {
+    margin: .2rem 0 .2rem 0;
     display: inline-block;
 }
 
-#mode-select {
+.modal-content select {
     font-size: 16px;
-    margin: 0px 5px 0px 10px;
     font-family: 'Fira Code';
     line-height: 1.3;
     border-radius: .3em;
+    display: inline-block;
 }
-#mode-select:focus {
+
+.modal-content select:focus {
     outline: none;
 }
 
